Fix mobile overflow issues

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -10,6 +10,10 @@ body, .spotlights > section {
   height: 52px;
 }
 
+header.major, header.major > :first-child {
+  width: 100%;
+}
+
 #banner h1 {
   font-family: Courier New, Courier, monospace;
   font-weight: bold;
@@ -99,4 +103,15 @@ body, .spotlights > section {
   left: 0;
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 540px) {
+  #header .logo {
+	  padding: 0 .25em;
+  }
+}
+  @media screen and (max-width: 540px) {
+    #main > * > .inner {
+	  padding: 1em 0 .25em 0;
+	  width: calc(100% - 2em);
+  }
 }
